# batbox

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  DIRECTORY.md  HANDOFF.md  LICENSE  MAINTENANCE.md  README.md  vcpkg.json
python-sidecar/: .gitignore  README.md  pyproject.toml  requirements.txt
python-sidecar/scrapling_server/: DIRECTORY.md  __init__.py  __main__.py  app.py
python-sidecar/scrapling_server/searchers/: DIRECTORY.md  __init__.py  ddg.py  searxng.py
python-sidecar/tests/: DIRECTORY.md  test_fetch_strips_assets.py
src/: App.cpp  App.hpp  AppShutdown.cpp  CMakeLists.txt  DIRECTORY.md  main.cpp  migrate.cpp  migrate.hpp  setup_sidecar.cpp  setup_sidecar.hpp
src/agents/: AgentEvent.cpp  AgentLoader.cpp  AgentSpec.cpp  AgentSupervisor.cpp  CMakeLists.txt  DIRECTORY.md  Demon.cpp  SubAgent.cpp  Team.cpp  Workflow.cpp  demon_taglines.hpp
src/app/: DIRECTORY.md  McpStatusPoller.cpp  PlanConfirmFn.cpp  WireCommands.cpp  WireTools.cpp  WireTui.cpp
src/commands/: AddDirCmd.cpp  AdvisorCmd.cpp  AgentsCmd.cpp  CMakeLists.txt  ClearCmd.cpp  CompactCmd.cpp  ConfigCmd.cpp  ContextCmd.cpp  CopyCmd.cpp  CostCmd.cpp  DIRECTORY.md  DemonCmd.cpp  DiffCmd.cpp  EffortCmd.cpp  ExitCmd.cpp  FilesCmd.cpp  HelpCmd.cpp  HooksCmd.cpp  IdeCmd.cpp  InitCmd.cpp  KeybindingsCmd.cpp  McpCmd.cpp  MemoryCmd.cpp  ModelCmd.cpp  OutputStyleCmd.cpp  PermissionsCmd.cpp  PlanCmd.cpp  PluginCmd.cpp  ResumeCmd.cpp  ReviewCmd.cpp  SecurityReviewCmd.cpp  SessionCmd.cpp  SkillsCmd.cpp  SlashCommandRegistry.cpp  StatsCmd.cpp  StatusCmd.cpp  TasksCmd.cpp  TerminalSetupCmd.cpp  ThemeCmd.cpp  UsageCmd.cpp  (+1 more)
src/config/: AgentsConfig.cpp  CMakeLists.txt  Config.cpp  ConfigReload.cpp  DIRECTORY.md  EnvLoader.cpp  KeybindingsConfig.cpp  McpConfig.cpp  SettingsLoader.cpp
src/conversation/: CMakeLists.txt  Compactor.cpp  ContextWindow.cpp  Conversation.cpp  DIRECTORY.md  Message.cpp  NotepadReminder.cpp  PlanMode.cpp  StandingReminder.cpp  SystemPrompt.cpp  ToolCallOrchestrator.cpp
src/core/: CMakeLists.txt  CancelToken.cpp  DIRECTORY.md  Json.cpp  Logging.cpp  Paths.cpp  Uuid.cpp
src/inference/: .placeholder.cpp  CMakeLists.txt  CanonicalModel.cpp  ChatRequest.cpp  Client.cpp  DIRECTORY.md  ModelPricing.cpp  Provider.cpp  ProviderHint.cpp  ReasoningAccumulator.cpp  ReasoningTagProfile.cpp  SseParser.cpp  ThinkSplitter.cpp  ToolCallAccumulator.cpp  UsageTracker.cpp
src/mcp/: CMakeLists.txt  DIRECTORY.md  HttpTransport.cpp  JsonRpc.cpp  McpClient.cpp  McpFraming.cpp  McpServerRegistry.cpp  SseTransport.cpp  StdioTransport.cpp  WsTransport.cpp
src/perf/: CMakeLists.txt  DIRECTORY.md  PerfSnapshot.cpp
src/permissions/: CMakeLists.txt  DIRECTORY.md  PatternMatcher.cpp  PermissionGate.cpp  PermissionMode.cpp  PermissionRule.cpp  PermissionStore.cpp
src/plugins/: AgentLoader.cpp  CMakeLists.txt  CommandLoader.cpp  DIRECTORY.md  FrontmatterParser.cpp  MarketplaceJson.cpp  PluginLoader.cpp  PluginRegistry.cpp  SkillLoader.cpp
src/repl/: Autocomplete.cpp  CMakeLists.txt  DIRECTORY.md  History.cpp  HistorySearch.cpp  Keybindings.cpp  Repl.cpp  VimMode.cpp
src/session/: CMakeLists.txt  DIRECTORY.md  SessionFile.cpp  SessionIndex.cpp  SessionRecovery.cpp  SessionStore.cpp  State.cpp
src/sidecar/: CMakeLists.txt  DIRECTORY.md  ScraplingClient.cpp  ScraplingProto.cpp  SidecarManager.cpp  SidecarState.cpp
src/skills/: BundledSkillsRegistry.cpp  CMakeLists.txt  DIRECTORY.md  embed.cmake
src/skills/data/: hunter.md  loop.md  schedule-remote-agents.md
src/theme/: CMakeLists.txt  DIRECTORY.md  Theme.cpp  themes.cpp
src/tools/: AskUserQuestionTool.cpp  BashTool.cpp  CMakeLists.txt  ConfigTool.cpp  CronCreateTool.cpp  CronDeleteTool.cpp  CronListTool.cpp  CronScheduler.cpp  CtxInspectTool.cpp  DIRECTORY.md  EditTool.cpp  EnterPlanModeTool.cpp  ExitPlanModeTool.cpp  GlobTool.cpp  GrepTool.cpp  ListMcpResourcesTool.cpp  ListPeersTool.cpp  McpTool.cpp  NotepadAppendTool.cpp  NotepadReadTool.cpp  NotepadStore.cpp  PowerShellTool.cpp  ReadMcpResourceTool.cpp  ReadTool.cpp  RemoteTriggerTool.cpp  ReportGoldTool.cpp  SelectionHeuristic.cpp  SendMessageTool.cpp  SkillTool.cpp  SleepTool.cpp  SnipTool.cpp  StandingSelector.cpp  SubagentDistiller.cpp  TaskCreateTool.cpp  TaskGetTool.cpp  TaskListTool.cpp  TaskOutputTool.cpp  TaskStopTool.cpp  TaskStore.cpp  TaskTool.cpp  (+13 more)
src/tools/bash/: AnsiStrip.cpp  AnsiStripInternal.hpp  BashRunner.cpp  CMakeLists.txt  DIRECTORY.md  EnvScrub.cpp  EnvScrubInternal.hpp  PipesBackend.cpp  PipesBackendInternal.hpp  PtyBackend.cpp  PtyBackendInternal.hpp
src/tui/: AccountLabel.cpp  AskqPromptFactory.cpp  CMakeLists.txt  Changelog.cpp  ChatView.cpp  DIRECTORY.md  DemonPanel.cpp  DiffCard.cpp  Events.cpp  InputBar.cpp  MarkdownRender.cpp  ModalPicker.cpp  ModalPickerHost.cpp  PermissionBanner.cpp  PermissionCard.cpp  PlanApprovalCard.cpp  QuestionCard.cpp  RenderStats.cpp  Screen.cpp  Splash.cpp  StreamingMessageView.cpp  SubAgentPanel.cpp  SyntaxHighlight.cpp  ThemeApply.cpp  splash_taglines.hpp
src/tui/manual_lexers/: DIRECTORY.md  (+10 more)
src/util/: DIRECTORY.md  EditorLaunch.cpp
tests/unit/: CMakeLists.txt  DIRECTORY.md  test_agent_event.cpp  test_agent_spec.cpp  test_agents_config.cpp  test_autocomplete.cpp  test_bash_tool_itool.cpp  test_bundled_skills.cpp  test_bundled_skills_registry.cpp  test_cancel_token.cpp  test_changelog.cpp  test_chat_view.cpp  test_chat_wire_model.cpp  test_chatview_streaming_cache.cpp  test_chatview_toolcard_cache.cpp  test_chatview_user_display_content.cpp  test_client_reasoning.cpp  test_commands_s1.cpp  test_compact_to_notepad.cpp  test_compaction_standdown.cpp  test_compactor_model_param.cpp  test_compactor_no_copy.cpp  test_config_env_overlay.cpp  test_config_load.cpp  test_context_window_estimator.cpp  test_conversation_cancel.cpp  test_cron_expr.cpp  test_css_lexer.cpp  test_ctx_inspect.cpp  test_demon_panel.cpp  test_diff_card.cpp  test_distill_config.cpp  test_editor_launch.cpp  test_env_loader.cpp  test_frontmatter_parser.cpp  test_glob_tool.cpp  test_history.cpp  test_history_search.cpp  test_html_lexer.cpp  test_input_bar.cpp  (+91 more)
(+406 files in other folders)
