[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapling_server"
version = "0.1.0"
description = "BatBox Python Scrapling sidecar — loopback HTTP IPC bridge for WebFetch/WebSearch/WebSelect"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapling[all]>=0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "markdownify>=0.11",
    "beautifulsoup4>=4.12",
]

[project.scripts]
scrapling-server = "scrapling_server.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapling_server*"]
